--- a/index.html
+++ b/index.html
@@ -85,9 +85,9 @@
         <label>Pilihan Program Studi:</label>
         <select name="prodi" required>
           <option value="">-- Pilih Program Studi --</option>
-          <option value="Informatika">Informatika</option>
+          <option value="Bisnis Digital">Bisnis Digital</option>
           <option value="Sistem Informasi">Sistem Informasi</option>
-          <option value="Teknik Elektro">Teknik Elektro</option>
+          <option value="Kewirausahaan">Kewirausahaan</option>
         </select><br /><br />
 
         <label>Keahlian Tambahan:</label><br />
